--- a/users/templates/registration.html
+++ b/users/templates/registration.html
@@ -1,6 +1,42 @@
-{% extends 'base.html' %}
+{% extends 'base.html'%}
+<!--Start of block title -->
+{% block 'title'%}
+Cadastro
 
-{% block 'content' %}
-<h1>Teste html</h1>
-<button>Cadastrar</button>
+{% endblock%}
+<!--End of block body -->
+<!--Start of block body -->
+{% block 'body' %}
+
+<div class="container">
+
+    <div class="row">
+        <div class="col-md-3">
+
+        </div>
+        <div class="col-md">
+            <br>
+            <h1>Cadastre-se</h1>
+            <hr>
+            <form method="POST" action="#">
+                <label>Digite seu nome:</label>
+                <input class="form-control" type="text" placeholder="Nome..." name="name">
+                <br>
+                <label>Digite seu Email:</label>
+                <input class="form-control" type="text" placeholder="E-mail" name="email">
+                <br>
+                <label>Digite seu senha:</label>
+                <input class="form-control" type="password" placeholder="Senha" name="password">
+                <br>
+                <input class="btn btn-success btn-lg" type="submit">
+                <a href="#" class="btn btn-info btn-lg">Logar</a>
+            </form>
+        </div>
+        <div class="col-md-3">
+
+        </div>
+    </div>
+
+</div>
+<!--End of block body -->
 {% endblock %}
