Inclusão de dados na tabela Users

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -19,7 +19,7 @@ Logar
             <hr>
             <form method="POST" action="#"><!--Start form -->
                 <label>Digite seu Email:</label>
-                <input class="form-control" type="text" placeholder="E-mail" name="email">
+                <input class="form-control" type="email" placeholder="E-mail" name="email">
                 <br>
                 <label>Digite seu senha:</label>
                 <input class="form-control" type="password" placeholder="Senha" name="password">
