--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -8,7 +8,11 @@ Logar
 <!--Start of block body -->
 {% block 'body' %}
 <div class="container">
-
+    {%if status == '1'%}
+        <div class="alert alert-danger" role="alert">
+            E-mail ou senha inválido!
+        </div>
+    {%endif%}
     <div class="row">
         <div class="col-md-3">
 
@@ -17,7 +21,8 @@ Logar
             <br>
             <h1>Login</h1>
             <hr>
-            <form method="POST" action="#"><!--Start form -->
+            <form method="POST" action="{% url 'valid_login'%}"><!--Start form -->
+                {% csrf_token %}
                 <label>Digite seu Email:</label>
                 <input class="form-control" type="email" placeholder="E-mail" name="email">
                 <br>
