--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -1,22 +1,26 @@
 {% extends 'base.html'%}
 
 {% block 'title'%}
-Home
+Curso
 
 {% endblock%}
 
 {% block 'body' %}
 <div class="container">
   <br>
-  <h1>Nossos cursos</h1>
+  <h1>Aulas do curso</h1>
   <div class="row">
       
 
-      {% for i in courses %}
+      {% for i in classes %}
 
           <div style="margin-top: 20px;" class="col-md">
               <div class="card" style="width: 18rem;">
-                  <img class="card-img-top" src="{{i.thumb.url}}" alt="Card image cap">
+                <video  controls>
+                  <source src="{{i.classes.url}}" type="video/mp4">
+
+                  Your browser does not support the video tag.
+                </video>
                   <div class="card-body">
                     <h5 class="card-title">{{i.name}}</h5>
                     <p class="card-text">{{i.description}}</p>
