--- a/courses/templates/course.html
+++ b/courses/templates/course.html
@@ -24,7 +24,7 @@ Curso
                   <div class="card-body">
                     <h5 class="card-title">{{i.name}}</h5>
                     <p class="card-text">{{i.description}}</p>
-                    <a href="#" class="btn btn-primary">Acessar</a>
+                    <a href="{% url 'class' i.id %}" class="btn btn-primary">Acessar</a>
                   </div>
                 </div>
           </div>
