--- a/courses/templates/class.html
+++ b/courses/templates/class.html
@@ -8,14 +8,16 @@ Aula
 
 {% block 'body' %}
 
+    
+   
 
 <div class="container">
   <br>
  
-  <h1>{{class_.nome}}</h1>
+  <h1>{{class.nome}}</h1>
   <hr>
   <video  width="100%" controls>
-      <source src="{{class.class.url}}" type="video/mp4">
+      <source src="{{class.classes.url}}" type="video/mp4">
     </video>
   <hr>
 
