Criação ta tabela comentários

--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -35,7 +35,7 @@ Logar
                 <input class="form-control" type="password" placeholder="Senha" name="password">
                 <br>
                 <input class="btn btn-success btn-lg" type="submit" value="Entrar" name="login">
-                <a href="#" class="btn btn-info btn-lg">Cadastre-se</a>
+                <a href="{% url 'registration'%}" class="btn btn-info btn-lg">Cadastre-se</a>
             </form><!--End form -->
         </div>
         <div class="col-md-3">
