--- a/users/templates/registration.html
+++ b/users/templates/registration.html
@@ -58,7 +58,7 @@ Cadastro
                 <input class="form-control" type="password" placeholder="Senha" name="password" required>
                 <br>
                 <input class="btn btn-success btn-lg" type="submit" value="Cadastrar">
-                <a href="#" class="btn btn-info btn-lg">Logar</a>
+                <a href="{% url 'login'%}" class="btn btn-info btn-lg">Logar</a>
             </form>
         </div>
         <div class="col-md-3">
